add company_card_tests and refactor old

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
 ;addopts = -sv -ra -q --tb=short
 ;--alluredir=allure_results --clean-alluredir
-;addopts = -sv -ra -v --tb=short
+addopts = -sv -ra -v --tb=short
